--- a/boxmodel/json/project.json
+++ b/boxmodel/json/project.json
@@ -1,38 +1,64 @@
 {
-    "webdesigning":[
-    {
-      "name":"static ecommerce",
-      "technology":"html css javascript",
-      "price":"150k",
-      "pages":"3 to 5",
-      "hosting":"13% charge extra",
-      "image":"assets/plane-1.avif",
-      "description":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-    },
- {
-    "webdevelopment":[
-        {
-            "name":"fashion inn",
-            "technology":"react lailwind javascript",
-             "price":"50k",
-            "pages":"3 to 5",
-            "hosting":"10% charge extra",
-            "image":"assets/plane-2.jpg",
-            "description":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+    "webdesigning": [
 
+        {
+
+            "name": "static ecommerce",
+            "technology": "html css javascript",
+            "price": "150k",
+            "pages": "3 to 5",
+            "hosting": "13% charge extra",
+            "image": "assets/plane-1.avif",
+            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+        },
+
+        {
+            "name": "fashion inn",
+            "technology": "react tailwind javascript",
+            "price": "50k",
+            "pages": "3 to 5",
+            "hosting": "10% charge extra",
+            "image": "assets/plane-2.jpg",
+            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+        },
+
+        {
+            "name": "course house",
+            "technology": "html css javascript bootstrap5",
+            "price": "50k",
+            "pages": "3 to 5",
+            "hosting": "10% charge extra",
+            "image": "assets/plane-3.jpg",
+            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+        }
+    ],
+
+    "web Development": [{
+            "name": "ecommerce",
+            "price": "150k",
+            "technology": "html css javacsript php",
+            "pages": "3 to 5",
+            "hosting": "10% charge extra",
+            "image": "assets/images/d2.jpeg",
+            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,"
+        },
+        {
+            "name": "fashion inn",
+            "price": "50k",
+            "technology": "react laravel 11",
+            "pages": "3 to 5",
+            "hosting": "10% charge extra",
+            "image": "assets/images/d2.jpeg",
+            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,"
+        },
+        {
+            "name": "daraz",
+            "price": "50k",
+            "technology": "react php",
+            "pages": "3 to 5",
+            "hosting": "10% charge extra",
+            "image": "assets/images/d2.jpeg",
+            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,"
         }
     ]
-},
-{ 
-    "course":[
-    {
-      "name":"course house",
-      "technology":"html css javascript",
-      "price":"50k",
-      "pages":"3 to 5",
-      "hosting":"10% charge extra",
-      "image":"assets/plane-3.jpg",
-      "description":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
-    }]
- }
-]}
+}
